# mlf-core

./: .buildinfo  .cookietemple.yml  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  AUTHORS.rst  CHANGELOG.rst  Dockerfile  LICENSE  Makefile  README.rst  adding_new_templates.html  authors.html  bump_version.html  changelog.html  code_of_conduct.html  config.html  contributing.html  cookietemple.cfg  create.html  creating_releases.html  faq.html  fix_artifact_paths.html  genindex.html  github_support.html  index.html  installation.html  lint.html  list_info.html  modules.html  mypy.ini  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  readme.html  reference.html  requirements.txt  (+10 more)
.github/: create.sh  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: new_template.md
.github/workflows/: build_docs.yml  build_package.yml  check_no_SNAPSHOT_master_main.yml  check_patch_release_master_main_only.yml  create_mlflow.yml  create_mlflow_pytorch.yml  create_mlflow_tensorflow.yml  create_mlflow_xgboost.yml  create_mlflow_xgboost_dask.yml  create_package_prediction.yml  create_package_prediction_pytorch.yml  create_package_prediction_tensorflow.yml  create_package_prediction_xgboost.yml  create_tensorflow.yml  create_xgboost.yml  labeler.yml  main_master_branch_protection.yml  (+10 more)
_sources/: adding_new_templates.rst.txt  bump_version.rst.txt  github_support.rst.txt  lint.rst.txt  list_info.rst.txt  upgrade.rst.txt
_static/: custom_cookietemple.css  documentation_options.js
available_templates/: available_templates.html  mlflow_pytorch.html  mlflow_shared_usage_faq.html  mlflow_tensorflow.html  mlflow_xgboost.html  mlflow_xgboost_dask.html  package_prediction.html
docs/: Makefile  adding_new_templates.rst  authors.rst  bump_version.rst  conf.py  config.rst  contributing.rst  create.rst  creating_releases.rst  faq.rst  fix_artifact_paths.rst  github_support.rst  index.rst  installation.rst  lint.rst  list_info.rst  make.bat  modules.rst  reference.rst  requirements.txt  sync.rst  tutorial.rst  upgrade.rst  usage.rst
exploding_springfield/: .mlf_core.yml  CHANGELOG.rst  Dockerfile  LICENSE  MLproject  README.rst  environment.yml  mlf_core.cfg
makefiles/: Linux.mk  Windows.mk
mlf_core/: __init__.py  __main__.py  cli.py
src/: __init__.py  __main__.py
tests/: __init__.py  test_dummy.py  test_main.py  test_mlf_core.py
(+244 files in other folders)
