[tool.poetry]
name = "mlf-core"
version = "1.11.3"  # <<COOKIETEMPLE_FORCE_BUMP>>
description = "Reproducible machine learning pipelines using mlflow."
authors = ["Lukas Heumos <lukas.heumos@posteo.net>"]
license = "Apache2.0"
readme = "README.rst"
homepage = "https://github.com/mlf-core/mlf-core"
repository = "https://github.com/mlf-core/mlf-core"
documentation = "https://mlf-core.readthedocs.io"
packages = [
    { include = "mlf_core" },
]
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]


[tool.poetry.dependencies]
python = ">=3.6.1,<3.10"
click = ">=7.1.2,<9.0.0"
rich = "^10.1.0"
PyYAML = "^5.4.1"
Jinja2 = ">=2.11.3,<4.0.0"
cookiecutter = "^1.7.2"
"ruamel.yaml" = "^0.17.4"
PyGithub = "^1.54.1"
GitPython = "^3.1.15"
autopep8 = "^1.5.6"
cffi = "^1.14.5"
cryptography = ">=3.4.7,<36.0.0"
requests = "^2.25.1"
packaging = ">=20.9,<22.0"
appdirs = "^1.4.4"
questionary = "^1.9.0"
PyNaCl = "^1.4.0"
mlflow = "^1.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = {extras = ["toml"], version = "^5.3"}
safety = "^1.9.0"
mypy = "^0.910"
typeguard = "^2.12.1"
xdoctest = {extras = ["colors"], version = "^0.15.9"}
sphinx = "^4.2.0"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.15.0"
flake8 = "^3.9.2"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.9.2"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.12.1"
darglint = "^1.5.8"
pre-commit-hooks = "^4.0.1"
sphinx-rtd-theme = "^1.0.0"
sphinx-click = "^3.0.1"
Pygments = "^2.10.0"
types-attrs = "^19.1.0"
types-requests = "^2.25.9"
types-pkg-resources = "^0.1.3"

[tool.poetry.scripts]
mlf-core = "mlf_core.__main__:main"

[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''
(
  /(
    create/templates
  )/
)
'''

[tool.mypy]
strict = false
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true
exclude = "templates"



[tool.coverage.paths]
source = ["mlf_core", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["mlf_core"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
